--- a/login.css
+++ b/login.css
@@ -6,17 +6,11 @@
 }
 body{
     background-color: black;
-<<<<<<< HEAD
     background: url('background2/18.jpeg') no-repeat center center fixed;
             background-size: cover;
 }
 .background{
     width: 760px;
-=======
-}
-.background{
-    width: 680px;
->>>>>>> 217a0368783e0b93e99337e3d36171a51f0009b4
     height: 630px;
     position: absolute;
     transform: translate(-50%,-50%);
@@ -84,7 +78,7 @@ input{
     display: block;
     height: 50px;
     width: 100%;
-    background-color: rgba(63, 5, 5, 0.07);
+    background-color: rgb(219, 224, 229);
     border-radius: 3px;
     padding: 0 10px;
     margin-top: 8px;
@@ -120,10 +114,8 @@ button{
 }
 .social div:hover{
   background-color: rgba(255,255,255,0.47);
+  cursor:pointer;
 }
-.social .fb{
-  margin-left: 25px;
-}
-.social i{
-  margin-right: 7px;
+.social div{
+  margin:20px;
 }
