--- a/aboutus.css
+++ b/aboutus.css
@@ -89,9 +89,12 @@ button:hover {
     object-fit: cover;
 }
 
+.socials{
+    font-size: 2rem;
+}
+
 .social-icons {
     display: flex;
-    justify-content: center;
     margin-top: 10px;
 }
 
@@ -125,6 +128,11 @@ button:hover {
     }
     .images-grid {
         width: 100%; /* Full width for images grid */
+    }
+    .social-icons {
+        display: flex;
+        margin-top: 10px;
+        justify-content: center;
     }
 }
 
