--- a/admin login.css
+++ b/admin login.css
@@ -1,114 +1,85 @@
-/* admin-login.css */
+     * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+        body {
+            background-color: rgb(10, 9, 9);
+            background: url('background2/20.jpeg') no-repeat center center fixed;
+            background-size: cover;
+        }
 
-body {
-    background-color: black;
-    background: url('background2/18.jpeg') no-repeat center center fixed;
-    background-size: cover;
-}
+        .container {
+            width: 760px;
+            height: 630px;
+            position: absolute;
+            transform: translate(-50%,-50%);
+            left: 50%;
+            top: 50%;
+        }
 
-.container {
-    width: 760px;
-    height: 630px;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    left: 50%;
-    top: 50%;
-}
+        .container .login-form {
+            height: 700px;
+            width: 600px;
+            background-color: rgba(255, 255, 255, 0.13);
+            position: absolute;
+            transform: translate(-50%,-50%);
+            top: 50%;
+            left: 50%;
+            border-radius: 10px;
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+            padding: 150px 100px;
+        }
 
-.container .login-form {
-    height: 520px;
-    width: 400px;
-    background-color: rgba(255, 255, 255, 0.13);
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    border: 2px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-    padding: 150px 100px;
-}
+        .container .login-form * {
+            font-family: 'Poppins', sans-serif;
+            color: #2b2222;
+            letter-spacing: 1.5px;
+            outline: none;
+            border: none;
+        }
 
-.container .login-form * {
-    font-family: 'Poppins', sans-serif;
-    color: #2b2222;
-    letter-spacing: 1.5px;
-    outline: none;
-    border: none;
-}
+        .container .login-form h2 {
+            font-size: 32px;
+            font-weight: 500;
+            line-height: 42px;
+            text-align: center;
+        }
 
-.container .login-form h2 {
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
-}
+        .container .login-form label {
+            display: block;
+            margin-top: 30px;
+            font-size: 16px;
+            font-weight: 500;
+        }
 
-.container .login-form label {
-    display: block;
-    margin-top: 30px;
-    font-size: 16px;
-    font-weight: 500;
-}
+        .container .login-form input {
+            display: block;
+            height: 50px;
+            width: 100%;
+            background-color: rgb(177, 215, 220);
+            border-radius: 3px;
+            padding: 0 10px;
+            margin-top: 8px;
+            font-size: 14px;
+            font-weight: 300;
+        }
 
-.container .login-form input {
-    display: block;
-    height: 50px;
-    width: 100%;
-    background-color: rgba(63, 5, 5, 0.07);
-    border-radius: 3px;
-    padding: 0 10px;
-    margin-top: 8px;
-    font-size: 14px;
-    font-weight: 300;
-}
+        .container .login-form ::placeholder {
+            color: #000000;
+        }
 
-.container .login-form ::placeholder {
-    color: #000000;
-}
-
-.container .login-form button {
-    margin-top: 50px;
-    width: 100%;
-    background-color: #ffffff;
-    color: #080710;
-    padding: 15px 0;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.container .social {
-    margin-top: 33px;
-    display: flex;
-}
-
-.container .social div {
-    background: red;
-    width: 150px;
-    border-radius: 3px;
-    padding: 5px 10px 10px 5px;
-    background-color: rgba(255, 255, 255, 0.27);
-    color: #07152e;
-    text-align: center;
-}
-
-.container .social div:hover {
-    background-color: rgba(255, 255, 255, 0.47);
-}
-
-.container .social .fb {
-    margin-left: 25px;
-}
-
-.container .social i {
-    margin-right: 7px;
-}
+        .container .login-form button {
+            margin-top: 50px;
+            width: 100%;
+            background-color: #ffffff;
+            color: #080710;
+            padding: 15px 0;
+            font-size: 18px;
+            font-weight: 600;
+            border-radius: 5px;
+            cursor: pointer;
+        }
