--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ body {
     text-decoration: none;
     font-weight: bold;
     margin-right: 20px;
+    line-height: 50px;
 }
 
 .navbar-links a:hover {
