--- a/view_profile.css
+++ b/view_profile.css
@@ -84,57 +84,39 @@ body {
 }
 
 .navbar {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
     background-color: white;
     padding: 14px 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 10px;
-    position: absolute;
+    position: absolute; 
     top: 0;
-    left: 0;
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 1000;
 }
 
-.navbar .logo a {
-    font-size: 1.5rem;
+.navbar-brand {
+    font-size: 24px;
     font-weight: bold;
-    color: black;
-    text-decoration: none;
 }
 
-.navbar ul {
+.navbar-links {
     display: flex;
-    list-style: none;
-    padding: 0;
-    margin-left: auto; /* Push the ul to the right */
+    align-items: center;
 }
 
-.navbar ul li {
-    margin-right: 20px;
-}
-
-.navbar ul li:last-child {
-    margin-right: 0;
-    text-decoration: underline; /* Add underline */
-}
-
-.navbar ul li:last-child a {
-    color: black; /* Restore original color */
-}
-
-.navbar ul li a {
-    text-decoration: none;
+.navbar-links a {
     color: black;
-    font-size: 1.2rem;
-    transition: color 0.3s ease;
+    text-decoration: none;
+    font-weight: bold;
+    margin-right: 20px;
+    line-height: 50px;
 }
 
-.navbar ul li a:hover {
-    color: orange;
+.navbar-links a:hover {
+    color: gray;
 }
 
 .dropdown {
@@ -165,11 +147,12 @@ body {
     position: absolute;
     right: 0;
     background-color: white;
-    min-width: 130px;
+    min-width: 130px; 
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1001;
+    z-index: 1001; 
 }
 
+.dropdown-content a,
 .dropdown-content form {
     color: black;
     padding: 10px 14px;
@@ -180,6 +163,7 @@ body {
     font-size: 13px;
 }
 
+.dropdown-content a:hover,
 .dropdown-content form:hover {
     background-color: #f1f1f1;
 }
@@ -193,7 +177,7 @@ body {
 }
 
 .dropdown:hover .dropbtn {
-    color: #440cc7;
+    color:#440cc7;
 }
 
 .logout-button {
