--- a/payment form style.css
+++ b/payment form style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0px;
     padding: 0;
     box-sizing: border-box;
@@ -7,97 +7,84 @@
 
 .container {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     min-height: 100vh;
     background-color: rgb(0, 162, 255);
 }
 
-.container form{
+.container form {
     width: 700px;
     padding: 40px;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
 }
 
-form .row{
+form .row {
     display: flex;
-    gap:15px;
     flex-wrap: wrap;
+    gap: 20px;
 }
 
-.column .title{
+.column {
+    flex: 1;
+    min-width: 250px;
+}
+
+.title {
     font-size: 20px;
-    color:black;
+    color: black;
     text-transform: uppercase;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
-.column .input-box{
-    margin:15px 0;
+.input-box {
+    margin: 15px 0;
 }
 
-.column .city-list{
-    margin:1px 0;
-    width:100%;
-    padding: 10px 15px;
-    border:1px solid #ccc;
-    border-radius: 6px;
-    font-size:15px;
-    margin-bottom: 15px;
-}
-
-.input-box input{
+.input-box input {
     width: 100%;
     padding: 10px 15px;
-    border:1px solid #ccc;
+    border: 1px solid #ccc;
     border-radius: 6px;
-    font-size:15px;
+    font-size: 15px;
 }
 
-.input-box span{
+.input-box span {
     display: block;
     margin-bottom: 10px;
 }
 
-.input-label{
+.input-label {
     display: block;
     margin-bottom: 10px;
 }
 
-.row .column{
-    flex: 1 1 250px;
-}
-
-.column .flex{
-    display:flex;
+.flex {
+    display: flex;
     gap: 15px;
 }
 
-.flex .input-box{
-    margin-top: 5px;
-}
-
-form .submitbtn{
+form .submitbtn {
     width: 100%;
     padding: 12px;
     background-color: #1c6fd5;
-    border:none;
-    outline:none;
-    border-radius:6px;
+    border: none;
+    outline: none;
+    border-radius: 6px;
     font-size: 20px;
     color: #fff;
-    margin-top: 5px;
-    cursor:pointer;
-    text-transform:uppercase;
+    margin-top: 20px;
+    cursor: pointer;
+    text-transform: uppercase;
 }
 
-form .submitbtn:hover{
+form .submitbtn:hover {
     background-color: #1b5295;
 }
 
-.input-box img{
-    height:34px;
-    margin-top:5px;
-    filter:drop-shadow(0 0 1px #000);
+.input-box img {
+    height: 34px;
+    margin-top: 5px;
+    filter: drop-shadow(0 0 1px #000);
 }
